--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -177,6 +177,24 @@
                         android:textSize="19sp" />
                 </LinearLayout>
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Enter 0 for no delivery charges"
+                    android:layout_marginStart="-10dp"
+                    android:textAlignment="center"/>
+
+                <Button
+                    android:id="@+id/previewBtn"
+                    android:layout_width="160dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:text="Read Sample"
+                    android:background="@drawable/round_corner"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/nunito"
+                    android:paddingTop="5dp"
+                    android:textSize="19sp" />
 
             </LinearLayout>
         </ScrollView>
