--- a/app/src/main/res/layout/activity_buy_book.xml
+++ b/app/src/main/res/layout/activity_buy_book.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightGrey"
     tools:context=".BuyBook">
 
     <RelativeLayout
@@ -14,13 +15,217 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/sadd"
-                android:layout_marginTop="6dp"
-                android:layout_height="wrap_content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:fontFamily="@font/nunito"
-                android:textColor="@color/black"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+               <LinearLayout
+                   android:id="@+id/customerinfo"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:paddingStart="10dp"
+                   android:orientation="vertical"
+                   android:background="@color/white"
+                   android:layout_marginBottom="15dp">
+
+                   <TextView
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:layout_marginBottom="15dp"
+                       android:textSize="23sp"
+                       android:textStyle="bold"
+                       android:text="Order Summary"/>
+
+                   <TextView
+                       android:id="@+id/oname"
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:text="Atharva Ikhar"
+                       android:textColor="@color/black"
+                       android:layout_marginBottom="8dp"
+                       android:textSize="20sp"/>
+
+                   <TextView
+                       android:id="@+id/onumber"
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:text="8698961606"
+                       android:layout_marginBottom="3dp"
+                       android:textColor="@color/black"/>
+
+                   <TextView
+                       android:id="@+id/oaddress"
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:text="103, Pranali Apartment, Kothrud, Pune"
+                       android:textColor="@color/black"/>
+
+                   <TextView
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:text="411038"
+                       android:textColor="@color/black"
+                       android:layout_marginBottom="10dp"/>
+
+                   <Button
+                       android:id="@+id/changeaddress"
+                       android:layout_height="45dp"
+                       android:layout_width="380dp"
+                       android:layout_gravity="center_horizontal"
+                       android:text="Change Address for this order"
+                       android:background="@color/colorPrimary"
+                       android:textColor="@color/white"
+                       android:layout_marginBottom="10dp"/>
+               </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:background="@color/white">
+
+                    <ImageView
+                        android:id="@+id/bthumbnail"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/loading_shape"
+                        />
+
+                    <LinearLayout
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/obname"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Notes from underground"
+                            android:textSize="18dp"
+                            android:textColor="@color/black" />
+                        <TextView
+                            android:id="@+id/obauthorname"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Fyodor Dostoevsky"/>
+                        <TextView
+                            android:id="@+id/ogenre"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Philosophy"/>
+
+                        <TextView
+                            android:id="@+id/oprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="₹ 180"
+                            android:textSize="24dp"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical"
+                    android:background="@color/white"
+                    android:layout_marginBottom="15dp">
+
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:paddingStart="10dp"
+                        android:textSize="19sp"
+                        android:textStyle="bold"
+                        android:paddingTop="5dp"
+                        android:text="Price details"/>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Price(1 item)"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/oitemprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="4dp"
+                            android:gravity="end"
+                            android:text="₹ 180"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Delivery charges"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/odeliprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="4dp"
+                            android:gravity="end"
+                            android:text="₹ 180"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Total amount"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/ototalprice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="4dp"
+                            android:gravity="end"
+                            android:text="₹ 180"
+                            android:textColor="@color/black"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </LinearLayout>
+            </LinearLayout>
 
         </ScrollView>
 
@@ -33,8 +238,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/buybook"
-
+                android:id="@+id/famount"
                 android:layout_width="190dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="left"
@@ -57,7 +261,7 @@
                 android:textSize="10sp" />
 
             <Button
-                android:id="@+id/rentbook"
+                android:id="@+id/continue"
                 android:layout_width="140dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="10dp"
