--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#f4d160</color>
     <color name="black">#000000</color>
     <color name="grey">#4E4E4E</color>
+    <color name="lightGrey">#EDEDED</color>
     <color name="white">#ffffff</color>
     <color name="darkBlue">#162e4c</color>
     <color name="red">#FF0000</color>
