--- a/app/src/main/res/layout/activity_buy_book.xml
+++ b/app/src/main/res/layout/activity_buy_book.xml
@@ -57,14 +57,14 @@
                        android:layout_marginBottom="3dp"
                        android:textColor="@color/black"/>
 
-                   <TextView
+                   <EditText
                        android:id="@+id/oaddress"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"/>
 
-                   <TextView
+                   <EditText
                        android:id="@+id/opin"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
@@ -72,14 +72,11 @@
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"/>
 
-                   <Button
-                       android:id="@+id/changeaddress"
-                       android:layout_height="45dp"
-                       android:layout_width="380dp"
-                       android:layout_gravity="center_horizontal"
-                       android:text="@string/change_address_for_this_order"
-                       android:background="@color/colorPrimary"
-                       android:textColor="@color/white"
+                   <TextView
+                       android:layout_height="wrap_content"
+                       android:layout_width="wrap_content"
+                       android:textSize="12sp"
+                       android:text="@string/click_on_address_to_change_address_for_this_order"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
 
@@ -87,7 +84,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:layout_marginBottom="10dp">
 
                     <ImageView
                         android:id="@+id/bthumbnail"
@@ -131,7 +129,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:orientation="vertical"
                     android:background="@color/white"
                     android:layout_marginBottom="10dp">
@@ -231,7 +228,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:orientation="vertical"
                     android:background="@color/white"
                     android:layout_marginBottom="10dp">
